--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>jenkins</artifactId>
+    <artifactId>maven-item</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-redis</artifactId>
-            <version>2.2.0.RELEASE</version>
+            <version>2.3.3.RELEASE</version>
         </dependency>
         <!-- jedis依赖 -->
         <dependency>
@@ -58,6 +58,12 @@
             <artifactId>jedis</artifactId>
             <version>2.7.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
+
         <!-- lombok-->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -86,14 +92,9 @@
 
         <!--mybatis-->
         <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis</artifactId>
-            <version>3.5.3</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.3.2</version>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.4.0</version>
         </dependency>
 
         <!-- rabbitmq-->
@@ -123,12 +124,17 @@
             <artifactId>spring-test</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.35</version>
+        </dependency>
 
     </dependencies>
 
     <build>
         <!--项目构建之后的名字-->
-        <finalName>test</finalName>
+        <finalName>maven-item</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
