--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,6 @@ spring:
   application:
     name: maven-test
   datasource:
-    # driverClassName: com.mysql.jdbc.Driver
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
@@ -58,4 +57,4 @@ spring:
 # 设置日志级别
 logging:
   level:
-    com.eric.mybatis.dao: debug
+    com.eric.mybatis.dao: info
