--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,18 +9,17 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: aroot123
-
-#  redis:
-#    host: 39.97.98.67
-#    port: 6379
-#    password:
-#    database: 0
-#    timeout: 300000ms #连接超时
-#    jedis:
-#      pool:
-#        max-active: 8 #连接池最大的连接数
-#        max-wait: -1ms #连接池最大的阻塞等待时间（负值表示没有限制）
-#        max-idle: 500 #连接池最大的空闲连接
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    password:
+    database: 0
+    timeout: 300000ms #连接超时
+    jedis:
+      pool:
+        max-active: 8 #连接池最大的连接数
+        max-wait: -1ms #连接池最大的阻塞等待时间（负值表示没有限制）
+        max-idle: 500 #连接池最大的空闲连接
 
 #  rabbitmq:
 #    host: 39.97.98.67
